Update cross reference format

--- a/docs/source/guide/developer/hpo.ipynb
+++ b/docs/source/guide/developer/hpo.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Efficient HPO with EvoX\n",
     "\n",
-    " In this chapter, we will discuss how to use EvoX for hyperparameter optimization (HPO).\n",
-    " \n",
-    " HPO is an essential step in many machine learning tasks, yet it often goes underappreciated. This is mainly due to its heavy computational demands, which can sometimes require days of processing, as well as the difficulties involved in deployment.\n",
-    " \n",
-    " In EvoX, we can easily deploy HPO using the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>`, and achieve efficient computation by leveraging the `vmap` method and GPU."
+    "In this chapter, we will discuss how to use EvoX for hyperparameter optimization (HPO).\n",
+    "\n",
+    "HPO is an essential step in many machine learning tasks, yet it often goes underappreciated. This is mainly due to its heavy computational demands, which can sometimes require days of processing, as well as the difficulties involved in deployment.\n",
+    "\n",
+    "In EvoX, we can easily deploy HPO using the [HPOProblemWrapper](#HPOProblemWrapper), and achieve efficient computation by leveraging the `vmap` method and GPU."
    ]
   },
   {
@@ -25,14 +25,14 @@
     ":align: center\n",
     "```\n",
     "\n",
-    "The key to deploy HPO with EvoX is to transform the {doc}`workflows <apidocs/evox/evox.workflows>` into {doc}`problems <apidocs/evox/evox.problems>` with the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>`. After that, we can treat {doc}`workflows <apidocs/evox/evox.workflows>` as common {doc}`problems <apidocs/evox/evox.problems>`. The input of the 'HPO problem' are the hyperparameters and the output is the metric.\n",
+    "The key to deploy HPO with EvoX is to transform the [workflows](#evox.workflows) into [problems](#evox.problems) with the [HPOProblemWrapper](#HPOProblemWrapper). After that, we can treat [workflows](#evox.workflows) as common [problems](#evox.problems). The input of the 'HPO problem' are the hyperparameters and the output is the metric.\n",
     "\n",
-    "### The Key Component -- {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>`\n",
-    "To enable {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` to recognize the hyperparameters, we need to wrap the hyperparameters with {doc}`Parameter <apidocs/evox/evox.core.module.Parameter>`. After this simple operation, the hyperparameters will be automatically recognized.\n",
+    "### The Key Component -- HPOProblemWrapper\n",
+    "To enable [HPOProblemWrapper](#HPOProblemWrapper) to recognize the hyperparameters, we need to wrap the hyperparameters with [Parameter](#Parameter). After this simple operation, the hyperparameters will be automatically recognized.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self,...): \n",
+    "    def __init__(self,...):\n",
     "        self.omega = Parameter([1.0, 2.0]) # wrap the hyperparameters with `Parameter`\n",
     "        self.beta = Parameter(0.1)\n",
     "        pass\n",
@@ -54,7 +54,7 @@
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self,...): \n",
+    "    def __init__(self,...):\n",
     "        self.pop = torch.rand(10,10) #attribute of the algotirhm itself\n",
     "        pass\n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self,...): \n",
+    "    def __init__(self,...):\n",
     "        self.pop = rand(10,10) #attribute of the algotirhm itself\n",
     "        pass\n",
     "\n",
@@ -81,7 +81,7 @@
     "\n",
     "    def minus(self, y):\n",
     "        self.pop -= y\n",
-    "        pass      \n",
+    "        pass\n",
     "\n",
     "    def step_with_python_control_flow(self, y): # function with python control flow\n",
     "        x = rand()\n",
@@ -100,9 +100,9 @@
     "        pass\n",
     "```\n",
     "\n",
-    "In EvoX, we can easily make the algorithm parallelizable by the {doc}`@trace_impl <apidocs/evox/evox.core.module.trace_impl>` decorator. \n",
+    "In EvoX, we can easily make the algorithm parallelizable by the [trace_impl](#trace_impl) decorator.\n",
     "\n",
-    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. \n",
+    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function.\n",
     "\n",
     "Under this mechanism, we can retain the original function for use outside HPO tasks while enabling efficient computation within HPO tasks. Moreover, this modification is highly convenient.\n"
    ]
@@ -113,11 +113,11 @@
    "source": [
     "## Utilizing the HPOMonitor\n",
     "\n",
-    "We should use {doc}`HPOMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOMonitor>` in the HPO task to monitor the metric of each inner algorithm. The {doc}`HPOMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOMonitor>` only add one `tell_fitness` method comparing with the common {doc}`monitor <apidocs/evox/evox.core.components.Monitor>`. This is designed to make the evaluation metrics for a set of hyperparameters more flexible, as metrics in HPO tasks are often multi-dimensional and complex.\n",
+    "We should use [HPOMonitor](#HPOMonitor) in the HPO task to monitor the metric of each inner algorithm. The HPOMonitor only add one `tell_fitness` method comparing with the common [monitor](#Monitor). This is designed to make the evaluation metrics for a set of hyperparameters more flexible, as metrics in HPO tasks are often multi-dimensional and complex.\n",
     "\n",
-    "Users only need to create a subclass of {doc}`HPOMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOMonitor>` and override the `tell_fitness` method to define their own evaluation metrics.\n",
+    "Users only need to create a subclass of HPOMonitor and override the `tell_fitness` method to define their own evaluation metrics.\n",
     "\n",
-    "We also provide a simple {doc}`HPOFitnessMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOFitnessMonitor>`, which supports calculating 'IGD' and 'HV' metrics for multi-objective problems and minimum value for single-objective problems."
+    "We also provide a simple [HPOFitnessMonitor](#HPOFitnessMonitor), which supports calculating 'IGD' and 'HV' metrics for multi-objective problems and minimum value for single-objective problems."
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here we would show you a simple example of how to use HPO with EvoX. We will use the {doc}`PSO <apidocs/evox/evox.algorithms.pso_variants.pso.PSO>` algorithm to search for the best hyperparameters of a simple algorithm to solve the sphere problem.\n",
+    "Here we would show you a simple example of how to use HPO with EvoX. We will use the [PSO](#PSO) algorithm to search for the best hyperparameters of a simple algorithm to solve the sphere problem.\n",
     "\n",
     "First, we need to import the necessary modules."
    ]
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define an simple sphere problem. Note that this has no difference from the common {doc}`problems <apidocs/evox/evox.problems>`."
+    "Next, we define an simple sphere problem. Note that this has no difference from the common [problems](#evox.problems)."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can define the algorithm. The oringinal `step` function is non-parallelizable. We rewrite it with the decorator {doc}`@trace_impl <apidocs/evox/evox.core.module.trace_impl>` to be parallelizable. We modify the in-place opeartions and python control flow."
+    "Then we can define the algorithm. The oringinal `step` function is non-parallelizable. We rewrite it with the decorator [trace_impl](#trace_impl) to be parallelizable. We modify the in-place opeartions and python control flow."
    ]
   },
   {
@@ -188,31 +188,31 @@
     "        assert lb.ndim == 1 and ub.ndim == 1, f\"Lower and upper bounds shall have ndim of 1, got {lb.ndim} and {ub.ndim}\"\n",
     "        assert lb.shape == ub.shape, f\"Lower and upper bounds shall have same shape, got {lb.ndim} and {ub.ndim}\"\n",
     "        self.pop_size = pop_size\n",
-    "        self.hp = Parameter([1.0, 2.0, 3.0, 4.0]) # the hyperparameters to be optimized\n",
+    "        self.hp = Parameter([1.0, 2.0, 3.0, 4.0])  # the hyperparameters to be optimized\n",
     "        self.lb = lb\n",
     "        self.ub = ub\n",
     "        self.dim = lb.shape[0]\n",
     "        self.pop = Mutable(torch.empty(self.pop_size, lb.shape[0], dtype=lb.dtype, device=lb.device))\n",
     "        self.fit = Mutable(torch.empty(self.pop_size, dtype=lb.dtype, device=lb.device))\n",
     "\n",
-    "    def strategy_1(self,pop): # one update strategy\n",
-    "        pop = pop * (self.hp[0]+self.hp[1])\n",
+    "    def strategy_1(self, pop):  # one update strategy\n",
+    "        pop = pop * (self.hp[0] + self.hp[1])\n",
     "\n",
-    "    def strategy_2(self,pop): #  the other update strategy\n",
-    "        pop = pop * (self.hp[2]+self.hp[3])\n",
+    "    def strategy_2(self, pop):  #  the other update strategy\n",
+    "        pop = pop * (self.hp[2] + self.hp[3])\n",
     "\n",
     "    def step(self):\n",
-    "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device) # simply random sampling\n",
+    "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device)  # simply random sampling\n",
     "        pop = pop * (self.ub - self.lb)[None, :] + self.lb[None, :]\n",
     "        control_number = torch.rand()\n",
-    "        if control_number < 0.5: # conditional control\n",
+    "        if control_number < 0.5:  # conditional control\n",
     "            pop = self.strategy_1(pop)\n",
     "        else:\n",
     "            pop = self.strategy_2(pop)\n",
-    "        self.pop.copy_(pop) # in-place update\n",
+    "        self.pop.copy_(pop)  # in-place update\n",
     "        self.fit.copy_(self.evaluate(pop))\n",
     "\n",
-    "    @trace_impl(step) #rewrite the step function to support vmap\n",
+    "    @trace_impl(step)  # rewrite the step function to support vmap\n",
     "    def trace_step(self):\n",
     "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device)\n",
     "        pop = pop * (self.ub - self.lb)[None, :] + self.lb[None, :]\n",
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we can use the {doc}`stdworkflow <apidocs/evox/evox.workflows.std_workflow>` to wrap the problem, algorithm and monitor. Then we use the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` to transform the {doc}`stdworkflow <apidocs/evox/evox.workflows.std_workflow>` to an HPO problem."
+    "Next, we can use the [StdWorkflow](#StdWorkflow) to wrap the problem, algorithm and monitor. Then we use the [HPOProblemWrapper](#HPOProblemWrapper) to transform the StdWorkflow to an HPO problem."
    ]
   },
   {
@@ -253,13 +253,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` takes 4 arguments:\n",
+    "The [HPOProblemWrapper](#HPOProblemWrapper) takes 4 arguments:\n",
     "1. iterations: The number of iterations to be executed in the optimization process.\n",
     "2. num_instances: The number of instances to be executed in parallel in the optimization process.\n",
-    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by {doc}`jit_class <apidocs/evox/evox.core.module.jit_class>`.\n",
+    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by [jit_class](#jit_class).\n",
     "4. copy_init_state: Whether to copy the initial state of the workflow for each evaluation. Defaults to `True`. If your workflow contains operations that IN-PLACE modify the tensor(s) in initial state, this should be set to `True`. Otherwise, you can set it to `False` to save memory.\n",
     "\n",
-    "We can test whether the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` recognizes the hyperparameters we define. Since we make no modification to the hyperparameters for the 7 instances, the hyperparameters should be the same for all instances."
+    "We can test whether the HPOProblemWrapper recognizes the hyperparameters we define. Since we make no modification to the hyperparameters for the 7 instances, the hyperparameters should be the same for all instances."
    ]
   },
   {
@@ -285,14 +285,14 @@
    ],
    "source": [
     "params = hpo_prob.get_init_params()\n",
-    "print('init params:\\n',params)"
+    "print(\"init params:\\n\", params)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also specify a set of hyperparameter values ourselves. Note that the number of hyperparameter sets must be consistent with the number of instances in the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` and the custom hyperparameters must be passed in the form of a dictionary and wrapped using the {doc}`Parameter <apidocs/evox/evox.core.module.Parameter>`."
+    "We can also specify a set of hyperparameter values ourselves. Note that the number of hyperparameter sets must be consistent with the number of instances in the HPOProblemWrapper and the custom hyperparameters must be passed in the form of a dictionary and wrapped using the [Parameter](#Parameter)."
    ]
   },
   {
@@ -325,15 +325,15 @@
     "# since we have 7 instances, we need to pass 7 sets of hyperparameters\n",
     "params[\"self.algorithm.hp\"] = torch.nn.Parameter(torch.rand(7, 4), requires_grad=False)\n",
     "result = hpo_prob.evaluate(params)\n",
-    "print('params:\\n',params,'\\n')\n",
-    "print('result:\\n',result)"
+    "print(\"params:\\n\", params, \"\\n\")\n",
+    "print(\"result:\\n\", result)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use the {doc}`PSO <apidocs/evox/evox.algorithms.pso_variants.pso.PSO>` algorithm to optimize the hyperparameters of ExampleAlgorithm. Note that the population size of the {doc}`PSO <apidocs/evox/evox.algorithms.pso_variants.pso.PSO>` should match the number of instances; otherwise, unexpected errors may occur. Here, we need to transform the solution in the outer workflow, as the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` must accept a dictionary as input."
+    "Now, we use the [PSO](#PSO) algorithm to optimize the hyperparameters of ExampleAlgorithm. Note that the population size of the PSO should match the number of instances; otherwise, unexpected errors may occur. Here, we need to transform the solution in the outer workflow, as the HPOProblemWrapper must accept a dictionary as input."
    ]
   },
   {
@@ -367,8 +367,8 @@
     "for _ in range(20):\n",
     "    outer_workflow.step()\n",
     "monitor = outer_workflow.get_submodule(\"monitor\")\n",
-    "print('params:\\n', monitor.topk_solutions, '\\n')\n",
-    "print('result:\\n', monitor.topk_fitness)"
+    "print(\"params:\\n\", monitor.topk_solutions, \"\\n\")\n",
+    "print(\"result:\\n\", monitor.topk_fitness)"
    ]
   }
  ],
