Update evox install check for colab

--- a/docs/source/guide/user/2-problems.ipynb
+++ b/docs/source/guide/user/2-problems.ipynb
@@ -17,10 +17,10 @@
    "outputs": [],
    "source": [
     "# install evox, skip it if you have already installed evox\n",
-    "try:\n",
-    "    import evox\n",
-    "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox brax"
+    "from importlib.util import find_spec\n",
+    "\n",
+    "if find_spec(\"evox\") is None:\n",
+    "    %pip install evox"
    ]
   },
   {
@@ -294,22 +294,22 @@
     "\n",
     "# Initialize the PSO, and you can also use any other algorithms\n",
     "algorithm = PSO(\n",
-    "            pop_size=POP_SIZE,\n",
-    "            lb=lower_bound,\n",
-    "            ub=upper_bound,\n",
-    "            device=device,\n",
-    "        )\n",
+    "    pop_size=POP_SIZE,\n",
+    "    lb=lower_bound,\n",
+    "    ub=upper_bound,\n",
+    "    device=device,\n",
+    ")\n",
     "algorithm.setup()\n",
     "\n",
     "# Initialize the Brax problem\n",
     "problem = BraxProblem(\n",
-    "            policy=model,\n",
-    "            env_name=\"hopper\",\n",
-    "            max_episode_length=1000,\n",
-    "            num_episodes=3,\n",
-    "            pop_size=POP_SIZE,\n",
-    "            device=device,\n",
-    "        )"
+    "    policy=model,\n",
+    "    env_name=\"hopper\",\n",
+    "    max_episode_length=1000,\n",
+    "    num_episodes=3,\n",
+    "    pop_size=POP_SIZE,\n",
+    "    device=device,\n",
+    ")"
    ]
   },
   {
@@ -343,11 +343,11 @@
     }
    ],
    "source": [
-    "#set an monitor, and it can record the top 3 best fitnesses\n",
+    "# set an monitor, and it can record the top 3 best fitnesses\n",
     "pop_monitor = EvalMonitor(\n",
-    "            topk=3,\n",
-    "            device=device,\n",
-    "        )\n",
+    "    topk=3,\n",
+    "    device=device,\n",
+    ")\n",
     "pop_monitor.setup()"
    ]
   },
@@ -446,14 +446,14 @@
     "\n",
     "# Run the worflow\n",
     "for index in range(max_generation):\n",
-    "        print(f\"In generation {index}:\")\n",
-    "        t = time.time()\n",
-    "        workflow.step()\n",
-    "        print(f\"\\tTime elapsed: {time.time() - t: .4f}(s).\")\n",
-    "        monitor: EvalMonitor = workflow.get_submodule(\"monitor\")\n",
-    "        print(f\"\\tTop fitness: {monitor.topk_fitness}\")\n",
-    "        best_params = adapter.to_params(monitor.topk_solutions[0])\n",
-    "        print(f\"\\tBest params: {best_params}\")"
+    "    print(f\"In generation {index}:\")\n",
+    "    t = time.time()\n",
+    "    workflow.step()\n",
+    "    print(f\"\\tTime elapsed: {time.time() - t: .4f}(s).\")\n",
+    "    monitor: EvalMonitor = workflow.get_submodule(\"monitor\")\n",
+    "    print(f\"\\tTop fitness: {monitor.topk_fitness}\")\n",
+    "    best_params = adapter.to_params(monitor.topk_solutions[0])\n",
+    "    print(f\"\\tBest params: {best_params}\")"
    ]
   },
   {
