--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -18,10 +18,10 @@
    "outputs": [],
    "source": [
     "# install evox, skip it if you have already installed evox\n",
-    "try:\n",
-    "    import evox\n",
-    "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox"
+    "from importlib.util import find_spec\n",
+    "\n",
+    "if find_spec(\"evox\") is None:\n",
+    "    %pip install evox"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "    w=0.6,\n",
     "    phi_p=2.5,\n",
     "    phi_g=0.8,\n",
-    "    )\n",
+    ")\n",
     "\n",
     "# Initiate a problem\n",
     "problem = Ackley()"
@@ -128,7 +128,7 @@
     "    algorithm=algorithm,\n",
     "    problem=problem,\n",
     "    monitor=monitor,\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "start = time.time()\n",
     "\n",
     "# Run the workflow\n",
-    "for i in range(1,101):\n",
+    "for i in range(1, 101):\n",
     "    workflow.step()\n",
     "    if i % 10 == 0:\n",
     "        run_time = time.time() - start\n",
