Fix the spelling mistakes of docs.

--- a/docs/source/example/Brax.ipynb
+++ b/docs/source/example/Brax.ipynb
@@ -304,7 +304,7 @@
     "# Set the maximum number of generations\n",
     "max_generation = 3\n",
     "\n",
-    "# Run the worflow\n",
+    "# Run the workflow\n",
     "for index in range(max_generation):\n",
     "        print(f\"In generation {index}:\")\n",
     "        t = time.time()\n",
