--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install evox, skip it if you have already installed evox\n",
+    "# install EvoX, skip it if you have already installed EvoX\n",
     "from importlib.util import find_spec\n",
     "\n",
     "if find_spec(\"evox\") is None:\n",
@@ -46,7 +46,7 @@
    "source": [
     "## The basic running process in EvoX\n",
     "\n",
-    "As a distributed GPU-accelerated framework for scalable evolutionary computation, EvoX can be uesd to do many kinds computations, so we say \"EvoX is all you need\". Though many kinds of computaions are different more or less, in EvoX we standard the basic running process:\n",
+    "As a distributed GPU-accelerated framework for scalable evolutionary computation, EvoX can be used to do many kinds computations, so we say \"EvoX is all you need\". Though many kinds of computations are different more or less, in EvoX we standard the basic running process:\n",
     "\n",
     "<div align='center'>\n",
     "    <b>Initiate an algorithm and a problem -- Set an monitor -- Initiate a workflow -- Run the workflow</b>\n",
@@ -86,13 +86,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the algorithm and problem themselves do not contain the monitoring of the steps, so we will not get any feed back only denpending on them. It turns out that we still need a **monitor**.\n",
+    "Notice that the algorithm and problem themselves do not contain the monitoring of the steps, so we will not get any feed back only depending on them. It turns out that we still need a **monitor**.\n",
     "\n",
     "## Set an monitor\n",
     "\n",
     "{doc}`Monitor <apidocs/evox/evox.workflows.eval_monitor>` is a standard class in EvoX to monitor the intermediate values inside a optimization process. Information like fitness or population can be easily obtained by the monitor.\n",
     "\n",
-    "Doing is better than saying, so let us create a “Evalution monitor”:"
+    "Doing is better than saying, so let us create a “Evaluation monitor”:"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "source": [
     "## Initiate an workflow\n",
     "\n",
-    "A **workflow** outlines the series of steps required to accomplish a task or project. In EvoX, a workflow represents the overall process of evolutionary computation, putting the algorithm, problem, monitor together.\n",
+    "A **workflow** outlines the series of steps required to accomplish a task or project. In EvoX, a workflow represents the overall process of evolutionary computation, putting the algorithm, problem and monitor together.\n",
     "\n",
     "If we want to run the algorithm to solve the problem with a monitor, we need to create a workflow of the {doc}`Workflow <apidocs/evox/evox.workflows>` class."
    ]
