--- a/docs/source/guide/user/2-problems.ipynb
+++ b/docs/source/guide/user/2-problems.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install evox, skip it if you have already installed evox\n",
+    "# install EvoX, skip it if you have already installed EvoX\n",
     "from importlib.util import find_spec\n",
     "\n",
     "if find_spec(\"evox\") is None:\n",
@@ -444,7 +444,7 @@
     "# Set the maximum number of generations\n",
     "max_generation = 3\n",
     "\n",
-    "# Run the worflow\n",
+    "# Run the workflow\n",
     "for index in range(max_generation):\n",
     "    print(f\"In generation {index}:\")\n",
     "    t = time.time()\n",
