Fix the spelling mistakes of docs.

--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "## The basic running process in EvoX\n",
     "\n",
-    "As a distributed GPU-accelerated framework for scalable evolutionary computation, EvoX can be used to do many kinds computations, so we say \"EvoX is all you need\". Though many kinds of computations are different more or less, in EvoX we standard the basic running process:\n",
+    "As a distributed GPU-accelerated framework for scalable evolutionary computation, EvoX can be used to do many kinds computations, so we say \"EvoX is all you need\". Though many kinds of computations are different more or less, in EvoX we standardize the basic running process:\n",
     "\n",
     "<div align='center'>\n",
     "    <b>Initiate an algorithm and a problem -- Set an monitor -- Initiate a workflow -- Run the workflow</b>\n",
