Fix some spelling and content mistakes of docs.

--- a/docs/source/example/Brax.ipynb
+++ b/docs/source/example/Brax.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "To start with, we need to decide which neural network we are about to construct.\n",
     "\n",
-    "Here we will give a simple Convolutional Neural Network (CNN) class. "
+    "Here we will give a simple Multilayer Perceptron (MLP) class. "
    ]
   },
   {
@@ -71,13 +71,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Construct an CNN using PyTorch.\n",
-    "# This CNN has 2 layers.\n",
+    "# Construct an MLP using PyTorch.\n",
+    "# This MLP has 3 layers.\n",
     "\n",
     "\n",
-    "class SimpleCNN(nn.Module):\n",
+    "class SimpleMLP(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(SimpleCNN, self).__init__()\n",
+    "        super(SimpleMLP, self).__init__()\n",
     "        self.features = nn.Sequential(nn.Linear(11, 4), nn.Tanh(), nn.Linear(4, 3))\n",
     "\n",
     "    def forward(self, x):\n",
@@ -91,7 +91,7 @@
    "source": [
     "## Initiate a model\n",
     "\n",
-    "Through the ``SimpleCNN`` class, we can initiate a CNN model."
+    "Through the ``SimpleMLP`` class, we can initiate a MLP model."
    ]
   },
   {
@@ -107,8 +107,8 @@
     "torch.manual_seed(seed)\n",
     "torch.cuda.manual_seed_all(seed)\n",
     "\n",
-    "# Initialize the CNN model\n",
-    "model = SimpleCNN().to(device)"
+    "# Initialize the MLP model\n",
+    "model = SimpleMLP().to(device)"
    ]
   },
   {
@@ -324,7 +324,7 @@
     "The PSO wasn’t specialized for this type of tasks, so its performance limitations here are expected. Here we just show an example.\n",
     "```\n",
     "\n",
-    "Hope you can have fun sloving Brax problems in EvoX and enjoy your time!"
+    "Hope you can have fun solving Brax problems in EvoX and enjoy your time!"
    ]
   }
  ],
