--- a/docs/source/example/custom_algo_prob.ipynb
+++ b/docs/source/example/custom_algo_prob.ipynb
@@ -128,7 +128,7 @@
     "The Sphere function is defined as:\n",
     "\n",
     "$$\n",
-    "\\textbf{min} f(x)= \\sum_{i=1}^{n} x_{i}^{2}\n",
+    "\\min f(x)= \\sum_{i=1}^{n} x_{i}^{2}\n",
     "$$\n",
     "**Here is an implementation example of Sphere problem in EvoX:**"
    ]
