--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the algorithm and problem themselves do not contain the monitoring of the steps, so we will not get any feed back only depending on them. It turns out that we still need a **monitor**.\n",
+    "Notice the algorithm and problem themselves do not contain the monitoring of the steps, so we will not get any feed back only depending on them. It turns out that we need a **monitor**.\n",
     "\n",
     "## Set an monitor\n",
     "\n",
