Modify Brax example to pass the ruff check.

--- a/docs/source/example/Brax.ipynb
+++ b/docs/source/example/Brax.ipynb
@@ -16,11 +16,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install evox, skip it if you have already installed evox\n",
-    "try:\n",
-    "    import evox\n",
-    "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox brax"
+    "# install EvoX and Brax, skip it if you have already installed EvoX\n",
+    "from importlib.util import find_spec\n",
+    "\n",
+    "if find_spec(\"evox\") is None:\n",
+    "    %pip install evox\n",
+    "\n",
+    "if find_spec(\"evox\") is None:\n",
+    "    %pip install evox"
    ]
   },
   {
