Modify the Brax example to pass ruff.

--- a/docs/source/example/Brax.ipynb
+++ b/docs/source/example/Brax.ipynb
@@ -16,14 +16,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install EvoX and Brax, skip it if you have already installed EvoX\n",
+    "# install EvoX and Brax, skip it if you have already installed EvoX or Brax\n",
     "from importlib.util import find_spec\n",
     "\n",
     "if find_spec(\"evox\") is None:\n",
     "    %pip install evox\n",
     "\n",
-    "if find_spec(\"evox\") is None:\n",
-    "    %pip install evox"
+    "if find_spec(\"brax\") is None:\n",
+    "    %pip install brax"
    ]
   },
   {
