Try to make docs' link goes well.

--- a/docs/source/example/Brax.ipynb
+++ b/docs/source/example/Brax.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "### Initiate an algorithm and a problem\n",
     "\n",
-    "We initiate a PSO algorithm, and the problem is a Brax problem in \"hopper\" environment."
+    "We initiate a [PSO algorithm](#evox.algorithms.pso_variants.pso.PSO), and the problem is a [Brax problem](#evox.problems.neuroevolution.brax.BraxProblem) in \"hopper\" environment."
    ]
   },
   {
