--- a/docs/source/example/custom_algo_prob.ipynb
+++ b/docs/source/example/custom_algo_prob.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Custom algorithm and problem\n",
-    "In this notebook, we will show how to use the Algorithm and Problem classes to create a custom algorithm and problem. Here we will give an example of **implementing a PSO algorithm that solves the Sphere problem**.\n",
+    "In this notebook, we will show how to use the [`Algorithm`](#evox.core.components.Algorithm) and [`Problem`](#evox.core.components.Problem) to create a custom algorithm and problem. Here we will give an example of **implementing a PSO algorithm that solves the Sphere problem**.\n",
     "\n"
    ]
   },
