--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Quick Start\n",
     "\n",
-    "In this notebook, we will help you be familiar with Evox through an simple example.\n",
+    "In this notebook, we will help you be familiar with EvoX through an simple example.\n",
     "\n",
     "To start with, make sure you have already installed the EvoX."
    ]
@@ -57,9 +57,9 @@
     "\n",
     "EvoX offers a comprehensive suite of 50+ Evolutionary Algorithms (EAs) and a wide range of 100+ Benchmark Problems/Environments, all benefiting from distributed GPU-acceleration. \n",
     "\n",
-    "For more details, please refer to our API documentation. {docs}`List of Algorithms <apidocs/evox/evox.algorithms>` {doc}`List of Problems<apidocs/evox/evox.problems>`.\n",
+    "For more details, please refer to our API documentation: [List of Algorithms](#evox.algorithms) and [List of Problems](#evox.problems).\n",
     "\n",
-    "Here we will create a PSO algorithm and an Ackley function."
+    "Here we will create a [PSO](#evox.algorithms.pso_variants.pso) algorithm and an [Ackley](#evox.problems.numerical.basic.Ackley) function problem."
    ]
   },
   {
@@ -90,7 +90,7 @@
     "\n",
     "## Set an monitor\n",
     "\n",
-    "{doc}`Monitor <apidocs/evox/evox.workflows.eval_monitor>` is a standard class in EvoX to monitor the intermediate values inside a optimization process. Information like fitness or population can be easily obtained by the monitor.\n",
+    "[`Monitor`](#evox.workflows.eval_monitor.EvalMonitor) is a standard class in EvoX to monitor the intermediate values inside a optimization process. Information like fitness or population can be easily obtained by the monitor.\n",
     "\n",
     "Doing is better than saying, so let us create a “Evaluation monitor”:"
    ]
@@ -113,7 +113,7 @@
     "\n",
     "A **workflow** outlines the series of steps required to accomplish a task or project. In EvoX, a workflow represents the overall process of evolutionary computation, putting the algorithm, problem and monitor together.\n",
     "\n",
-    "If we want to run the algorithm to solve the problem with a monitor, we need to create a workflow of the {doc}`Workflow <apidocs/evox/evox.workflows>` class."
+    "If we want to run the algorithm to solve the problem with a monitor, we need to create a workflow of the [`Workflow`](#evox.core.components.Workflow) class."
    ]
   },
   {
