--- a/docs/source/guide/user/2-problems.ipynb
+++ b/docs/source/guide/user/2-problems.ipynb
@@ -16,11 +16,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install EvoX, skip it if you have already installed EvoX\n",
+    "# install EvoX and Brax, skip it if you have already installed EvoX and Brax\n",
     "from importlib.util import find_spec\n",
     "\n",
     "if find_spec(\"evox\") is None:\n",
-    "    %pip install evox"
+    "    %pip install evox\n",
+    "\n",
+    "if find_spec(\"brax\") is None:\n",
+    "    %pip install brax"
    ]
   },
   {
@@ -48,7 +51,7 @@
     "## Use EvoX to solve Neuroevolution Tasks\n",
     "Neuroevolution is an optimization method that combines neural networks with evolutionary algorithms to evolve the structure and parameters of neural networks. By simulating natural selection and genetic mechanisms, Neuroevolution aims to optimize neural network architectures and weights, addressing complex problems such as game AI, robotic control, and more.\n",
     "\n",
-    "In our example of neuroevolution tasks, Brax is needed. So it is recommended to install Brax if you want to reproduce this example."
+    "In our example of neuroevolution tasks, Brax is needed. So it is recommended to install Brax if you want to replicate this example."
    ]
   },
   {
@@ -59,9 +62,8 @@
     "\n",
     "Brax is a fast and fully differentiable physics engine used for research and development of robotics, human perception, materials science, reinforcement learning, and other simulation-heavy applications. \n",
     "\n",
-    "For more information, you can browse the [Github of Brax](https://github.com/google/brax).\n",
-    "\n",
-    "We will demonstrate a \"hopper\" environment of Brax."
+    "Here we will demonstrate a \"hopper\" environment of Brax. For more information, you can browse the [Github of Brax](https://github.com/google/brax).\n",
+    "\n"
    ]
   },
   {
@@ -81,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Construct an MLP using Torch.\n",
+    "# Construct an MLP using PyTorch.\n",
     "# This MLP has 3 layers.\n",
     "\n",
     "\n",
@@ -101,7 +103,7 @@
    "source": [
     "### Initiate a model\n",
     "\n",
-    "Through the ``SimpleMLP`` class, we can initiate a MLP model."
+    "Through the `SimpleMLP` class, we can initiate a MLP model."
    ]
   },
   {
@@ -179,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if we check the weights for this network, we will see that it's group of parameter sets, which EC algorithms cannot directly work with data in this format:"
+    "If we check the weights data of this network, we will see the data is in the dictionary form, and many EC algorithms cannot directly work with such a format:"
    ]
   },
   {
@@ -220,19 +222,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fortunately, EvoX provides some useful utilities to help us bridge the gap, and in this case, we have `ParamsAndVector` class to help us convert a tree-like struct into a vector and back.\n",
+    "Fortunately, EvoX provides some useful utilities to help us bridge the gap, and in this case, we have [`ParamsAndVector`](#evox.utils.parameters_and_vector.ParamsAndVector) class to help us convert a tree-like struct into a vector and back.\n",
     "\n",
     "### Initiate an adapter\n",
     "\n",
     "An adapter can help us convert the data back-and-forth.\n",
     "\n",
-    "- `to_vector` can convert a parameters dictionary to a vector.\n",
-    "- `to_params` can convert a vector back to a parameters dictionary.\n",
+    "- [`to_vector`](#evox.utils.parameters_and_vector.ParamsAndVector.to_vector) can convert a parameters dictionary to a vector.\n",
+    "- [`to_params`](#evox.utils.parameters_and_vector.ParamsAndVector.to_params) can convert a vector back to a parameters dictionary.\n",
     "\n",
     "There are also batched version conversion.\n",
     "\n",
-    "- `batched_to_vector` can convert a batched parameters dictionary to a batch of vectors.\n",
-    "- `batched_to_params` can convert a batch of vectors back to a batched parameters dictionary."
+    "- [`batched_to_vector`](#evox.utils.parameters_and_vector.ParamsAndVector.batched_to_vector) can convert a batched parameters dictionary to a batch of vectors.\n",
+    "- [`batched_to_params`](#evox.utils.parameters_and_vector.ParamsAndVector.batched_to_params) can convert a batch of vectors back to a batched parameters dictionary."
    ]
   },
   {
@@ -278,7 +280,7 @@
     "\n",
     "### Initiate an algorithm and a problem\n",
     "\n",
-    "We still initiate a PSO algorithm, and the problem is a Brax problem in \"hopper\" environment."
+    "We still initiate a [PSO](#evox.algorithms.pso_variants.pso.PSO) algorithm, and the problem is a [Brax problem](#evox.problems.neuroevolution.brax.BraxProblem) in \"hopper\" environment."
    ]
   },
   {
@@ -324,7 +326,7 @@
     "- `max_episode_length` is the maximum number of steps for each episode.\n",
     "\n",
     "- `num_episodes` is the number of episodes to run for each evaluation.\n",
-    "```{note}\n",
+    "```\n",
     "\n",
     "In this case, we will be using 1000 steps for each episode, and the average reward of 3 episodes will be returned as the fitness value.\n",
     "\n",
@@ -466,8 +468,10 @@
    "metadata": {},
    "source": [
     "```{note}\n",
-    "The PSO wasn’t specialized for this type of tasks, so its performance limitations here are expected. Here we just show an example, and hope you can use a quantity of more effective algorithms in EvoX and enjoy your time!\n",
-    "```"
+    "The PSO wasn’t specialized for this type of tasks, so its performance limitations here are expected. Here we just show an example.\n",
+    "```\n",
+    "\n",
+    "Hope you can use a quantity of more effective algorithms in EvoX and enjoy your time!"
    ]
   }
  ],
